@@ -85,7 +85,7 @@ class MenusModelItems extends JModelList
 		$level = $this->getUserStateFromRequest($this->context . '.filter.level', 'filter_level', 0, 'int');
 		$this->setState('filter.level', $level);
 
-		$menuType = $app->input->get('menutype', null);
+		$menuType = $app->input->getString('menutype', null);
 		if ($menuType)
 		{
 			if ($menuType != $app->getUserState($this->context . '.filter.menutype'))
